@@ -112,6 +112,7 @@ Changes in current version:
  o Do not use SO_REUSEADDR when connecting
  o Support 64-bit integers in RPC structs
  o Correct handling of trailing headers in chunked replies; from Scott Lamb.
+ o Support multi-line HTTP headers; based on a patch from Moshe Litvin
 	
 Changes in 1.4.0:
  o allow \r or \n individually to separate HTTP headers instead of the standard "\r\n"; from Charles Kerr.
